CocacolaProject/src/objects/RFA__c.object
<CustomObject>
    <fields>
        <fullName>Ratification__c</fullName>
        <label>Ratification?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Entertainment__c</fullName>
        <description>Entertainment</description>
        <label>Reason for Entertainment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>This field is used in VF Page (RFA-VFP03-ApprovalRouting) to show the field name correctly.</description>
        <formula>RecordType.Name</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_RFA_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related RFA 1</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>Related RFA</relationshipLabel>
        <relationshipName>Related_RFA_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_RFA_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related RFA 2</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>Related RFA 2</relationshipLabel>
        <relationshipName>Related_RFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_RFA_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related RFA 3</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>Related RFA 3</relationshipLabel>
        <relationshipName>Related_RFA_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_CCEJ__c</fullName>
        <description>Entertainment</description>
        <label>Relationship to CCEJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks_TravelExpense__c</fullName>
        <defaultValue>&quot;海外出張の場合はパスポートのコピーと旅程表を添付してください。&quot; +BR()+
&quot;団体出張の場合は必ず同行者リストを添付してください。&quot;

+BR()+BR()+

&quot;Please note that for any overseas trip you must attach a copy of your passport and itinerary.&quot; +BR()+
&quot;For group trips, additionally, a list of the group members must be attached.&quot;</defaultValue>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Request_Amount_000JPY__c</fullName>
        <formula>RequestAmountFunctionalCurrency__c  / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Amount (000JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestAmountFunctionalCurrency__c</fullName>
        <inlineHelpText>申請金額は、COAの財務パラメータに基づきます。例えば、予測される契約上の支出、金銭債務、減損額など。</inlineHelpText>
        <label>Request Amount (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestTitle__c</fullName>
        <inlineHelpText>簡潔な言葉で申請の内容を説明します（例えば、東海地区の故障自動販売機5台等など）。</inlineHelpText>
        <label>Request Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <formula>CreatedBy.LastName &amp; &quot; &quot; &amp; CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <label>Requester Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_L4_Function_E__c</fullName>
        <formula>CreatedBy.L4_Function_E__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester L4 Function E</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <formula>CreatedBy.LastName &amp; &quot; &quot; &amp;  CreatedBy.FirstName &amp; &quot;, &quot; &amp;  
TEXT( YEAR(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; 
TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; 
TEXT(  DAY(DATEVALUE(CreatedDate)))</formula>
        <label>Requested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restaurant_Entertainment__c</fullName>
        <description>Entertainment</description>
        <label>Restaurant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnReason__c</fullName>
        <description>Comments to be entered by a Location Coordinator or Capital Management team member when an RFA is placed into Return to Sender Stage.</description>
        <label>Return Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risks_and_Alternatives_CPSP__c</fullName>
        <defaultValue>&quot;リスクとその軽減策や代替案を具体的に記載します。&quot; +BR()+
&quot;　・リスク：実行中止やスケジュール遅延、費用増等の可能性について記載&quot; +BR()+
&quot;　・軽減策：修正スケジュールや投資内容の見直し等の対応策を記載&quot; +BR()+
&quot;　・代替案：申請の内容が承認されなかった場合の考え得る最良の代替案について記載&quot;

+BR()+BR()+

&quot;Describe business risks, including risks of inaction or delay. Outline specific risks and mitigating factors including those related to technology, complexity, operational business or timeline.&quot; +BR()+
&quot;Describe the environmental assessment, including risks and impact (such as material increase/decrease in water and energy use, emissions, recyclability or solid waste) and how the specific environmental risks will be mitigated.&quot; +BR()+
&quot;Explain alternative scenarios or solutions considered (financial and/or business) and the rationale for rejecting them in favor of recommended solution.&quot; +BR()+
&quot;Describe the optimal alternative action the operation would consider, including financial impact, if the capital being requested is not approved.&quot;</defaultValue>
        <label>Risks and Alternatives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risks_and_Alternatives__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SecondCOACategory__c</fullName>
        <label>Second COA Category</label>
        <picklist>
            <picklistValues>
                <fullName>I. Purchase, Disposal, Revaluation or Write-off of Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II. Leases and Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III. Pricing / Operating Revenues / Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV. Operating Expenses and Purchases (not covered by General Threshold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI. Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII. Other Transactions / Activities / Contracts and Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII. Corporate Structures and Mergers and Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX. Board of Directors Approvals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondCOASubCategory2__c</fullName>
        <label>Second COA Sub Category 2</label>
        <picklist>
            <controllingField>SecondCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Approval of Annual Capital Investment project Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved (Capital Projects, Medium Projects and Small Projects)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Unbudgeted Capital Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Change of scope in the approved Capital Investment Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Intangible fixed assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Write-offs of uncollectible trade accounts receivable and other receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Inventory Adjustments and Disposals (incl. Flush-outs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Real Estate - Rental Contracts (CCEJ or Subsidiaries as Tenant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Movable Assets (including vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishment of and changes to Price, Terms and Conditions Concept (PTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Specific deviation or a new program to the approved Price, Terms and Conditions Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. New price lists / rebate lists and changes to existing price lists / rebate lists for the full service vending machine business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Changes of gross price lists valid for certain channels, packages and brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Determination of and changes to the standard cost of sales and intercompany transfer price for KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Determination of changes to standard cost of sales for Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of the following Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales &amp; Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for VM Div. Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for Equipment Operating Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Approval of Customer Agreement for FV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishing or amending overall CCEJ credit policy (including credit limits)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits - Create less risk to the company (shortening credit terms)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondCOASubCategory3__c</fullName>
        <label>Second COA Sub Category 3</label>
        <picklist>
            <controllingField>SecondCOASubCategory2__c</controllingField>
            <picklistValues>
                <fullName>a. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other intangible assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Funding by shift of funds from an approved current year Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Inventory Count Adjustment (per location)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Write-offs and disposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Write-downs (incl. flush out)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. New location, Extension of existing location or Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Non-Budgeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Establishment of and changes to PTC - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Establishment of and changes to PTC - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Specific deviation or a new program to the approved PTC Concept - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Specific deviation or a new program to the approved PTC Concept - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Approval of periodic gross price list changes for whole KO and Non-KO products range or parts thereof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination of gross list price / local conditions for single SKUs - KO for existing packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination of gross list price / local conditions for single SKUs - KO for new packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Approval of material master request for Non-KO trading goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Approval of material master request for Non-KO other items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Determination of gross list price for advertising material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Approval of KO-material master request for cross territory sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Approval of transfer price for sales transactions with other bottlers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Annual approval of standard cost of sales (Intercompany transfer price within CCEJ group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondCOASubCategory__c</fullName>
        <label>Second COA Sub Category 1</label>
        <picklist>
            <controllingField>SecondCOACategory__c</controllingField>
            <picklistValues>
                <fullName>A. Purchase of Fixed Assets (Capital Expenditures)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Disposal of Fixed Assets (Sale and write-off)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Transfer of Fixed Assets among consolidated CCEJ locations and operations (tangible and intangible assets)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Revaluation or Write-off of Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Operating Leases / Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Capital Leases(excluding Vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Pricing Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Customer Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Credit Terms / Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Operating Expenses within Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Operating Expenses in excess of Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Marketing Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. CCEJ One-time Integration Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. External Borrowings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Intercompany Loans (within CCEJ Group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Derivative and other Financial Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Cash Disbursements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Loans, Loan Guarantees and Guarantees for Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Litigation, Termination and Dismissal of employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Compensation and Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Club Memberships and Other Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F. Collective Labor Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Overtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H. Travel Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Charitable Donations and Political Related Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Social Amenities, Gifts, Entertainment, Congratulatory or Condolence money, and Other Courtesies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Supply, Purchase and Outsourcing Agreements (including Contract Manufacturing Arrangements)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>承認状況に基づき、自動的に割り当てられます。</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Circulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Requester</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Travel Expense</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>RFA R1 - To store the subject of the Completion Memo</description>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TECH_LastStatusChangeDate__c</fullName>
        <description>RFA R1 - This Date-Time field will track the Date and Time when the RFA Level/stage has been changed</description>
        <label>TECH_LastStatusChangeDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInCapMgmtHold__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Capital Management Hold</description>
        <label>TECH_TimeInCapMgmtHold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInDraft__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Draft</description>
        <label>TECH_TimeInDraft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInKeyOpsCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Key Operations Circulation</description>
        <label>TECH_TimeInKeyOpsCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInKeyOpsPostCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Key Operations Post-Circulation</description>
        <label>TECH_TimeInKeyOpsPostCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInKeyOpsPreCirculation__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Key Operations Pre-Circulation</description>
        <label>TECH_TimeInKeyOpsPreCirculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInPendBoardReview__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Pending Board Review</description>
        <label>TECH_TimeInPendBoardReview</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInReturnToSender__c</fullName>
        <description>RFA R1 - Technical Field to store the time (in millisecond) a RFA has spend in Return To Sender</description>
        <label>TECH_TimeInReturnToSender</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <formula>FC_TaxRate__r.Tax_Rate__c</formula>
        <label>Tax Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TermoftheAgreementYears__c</fullName>
        <inlineHelpText>The length of the CAPPrs agreement.</inlineHelpText>
        <label>Term of the Agreement (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Theapprovalstatusofyourrequestis__c</fullName>
        <description>Approval Status of the RFA Request</description>
        <inlineHelpText>承認状況を表示します（無条件承認、条件付き承認など）。</inlineHelpText>
        <label>This request has been</label>
        <picklist>
            <picklistValues>
                <fullName>Unconditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed / Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected / Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thefollowingitem__c</fullName>
        <inlineHelpText>COAに従ってRFAが承認された状況を選択してください。</inlineHelpText>
        <label>This request was circulated to</label>
        <picklist>
            <picklistValues>
                <fullName>Approval and / or for information only as required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Directors for approval as required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ThirdCOACategory__c</fullName>
        <label>Third COA Category</label>
        <picklist>
            <picklistValues>
                <fullName>I. Purchase, Disposal, Revaluation or Write-off of Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II. Leases and Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III. Pricing / Operating Revenues / Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV. Operating Expenses and Purchases (not covered by General Threshold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI. Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII. Other Transactions / Activities / Contracts and Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII. Corporate Structures and Mergers and Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX. Board of Directors Approvals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ThirdCOASubCategory2__c</fullName>
        <label>Third COA Sub Category 2</label>
        <picklist>
            <controllingField>ThirdCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Approval of Annual Capital Investment project Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved (Capital Projects, Medium Projects and Small Projects)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Unbudgeted Capital Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Change of scope in the approved Capital Investment Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Intangible fixed assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Write-offs of uncollectible trade accounts receivable and other receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Inventory Adjustments and Disposals (incl. Flush-outs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Real Estate - Rental Contracts (CCEJ or Subsidiaries as Tenant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Movable Assets (including vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishment of and changes to Price, Terms and Conditions Concept (PTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Specific deviation or a new program to the approved Price, Terms and Conditions Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. New price lists / rebate lists and changes to existing price lists / rebate lists for the full service vending machine business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Changes of gross price lists valid for certain channels, packages and brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Determination of and changes to the standard cost of sales and intercompany transfer price for KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Determination of changes to standard cost of sales for Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of the following Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales &amp; Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for VM Div. Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for Equipment Operating Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Approval of Customer Agreement for FV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishing or amending overall CCEJ credit policy (including credit limits)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits - Create less risk to the company (shortening credit terms)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>